# MXADataModel

./: .cproject  .cvsignore  .gitmodules  BUILDING.MD  CMakeLists.txt  CompileNotes.txt  Doxyfile.cfg  License.txt  MXADataModel.doxyfile  ReadMe.txt  TODO.txt  _meta.xml
Code/: CMakeLists.txt
Code/MXA/BMPIO/: MXABmpHeaders.h  MXABmpIO.cpp  MXABmpIO.h  SourceList.cmake
Code/MXA/Base/: Base_SourceList.cmake  IAttribute.h  IAttributeHelper.h  IAttributeWriter.h  IDataDimension.h  IDataDimensionWriter.h  IDataFile.h  IDataFileIO.h  IDataImport.h  IDataModel.h  IDataModelReader.h  IDataModelWriter.h  IDataRecord.h  IDataRecordWriter.h  IDataSource.h  IDataset.h  IFileIODelegate.h  IImportDelegate.h  IImportProperty.h  IMXAArray.h  IMXADataModelReaderDelegate.h  IMXADataModelWriterDelegate.h  INode.h  IRequiredMetaData.h  SourceList.cmake
Code/MXA/Common/: Common_SourceList.cmake  LogTime.h  MXAEndian.h  MXAMemory.h  MXASetGetMacros.h  MXATypeDefs.h  RTTIMacros.h  SourceList.cmake  Win32Defines.h
Code/MXA/Common/IO/Private/: MXAPrivateFileReader.h  MXAPrivateFileWriter.h  MXAPrivateWindowsFileReader.h  MXAPrivateWindowsFileWriter.h
Code/MXA/Core/: AttributeHelpers.h  Core_SourceList.cmake  MXADataDimension.cpp  MXADataDimension.h  MXADataImport.cpp  MXADataImport.h  MXADataModel.cpp  MXADataModel.h  MXADataModelWriter.hpp  MXADataModel_ExtraCode.cxx  MXADataRecord.cpp  MXADataRecord.h  MXADataSource.cpp  MXADataSource.h  MXANode.cpp  MXANode.h  MXASupportFile.cpp  MXASupportFile.h  RequiredMetaData.h  SourceList.cmake
Code/MXA/DataImport/: AbstractImportDelegateFactory.h  DataImportXmlParser.cpp  DataImportXmlParser.h  DataImport_SourceList.cmake  ImportDelegateManager.cpp  ImportDelegateManager.h  SourceList.cmake
Code/MXA/DataWrappers/: DataExportProperties.h  DataWrappers_SourceList.cmake  MXA2DArray.hpp  MXAArrayTemplate.hpp  MXAAsciiStringData.cpp  MXAAsciiStringData.h  MXARGBImage.cpp  MXARGBImage.h  SourceList.cmake
Code/MXA/HDF5/: H5Attribute.cpp  H5AttributeWriter.h  H5BmpIO.h  H5BmpImportDelegate.cpp  H5BmpImportDelegate.h  H5BmpImportDelegateFactory.cpp  H5Dataset.cpp  H5Dataset.h  H5Image.cpp  H5Lite.cpp  H5Lite.h  H5MXADataFile.cpp  H5MXADataFile.h  H5MXARequiredMetaData.cpp  H5MXAUtilities.cpp  H5ReaderDelegate.cpp  H5ReaderDelegate.h  H5TiffIO.cpp  H5TiffIO.h  H5TiffImportDelegate.h  H5TiffImportDelegateFactory.cpp  H5TiffImportDelegateFactory.h  H5Utilities.cpp  H5Utilities.h  H5WriterDelegate.cpp  H5WriterDelegate.h  HDF5_SourceList.cmake  SourceList.cmake  vtkHDF5.cpp
Code/MXA/Utilities/: DataSourcePathBuilder.h  DataSourcePathIndexSection.h  DataSourcePathTextSection.cpp  DataSourcePathTextSection.h  IStringSection.h  MXADir.h  MXAFileInfo.h  MXAFileSystemPath.cpp  MXALogger.h  SourceList.cmake  StringUtils.h  Utilities_SourceList.cmake  _MXAFileSystemPath.h
Code/MXA/XML/: DataModelXMLEvtHandler.cpp  DataModelXMLEvtHandler.h  ExpatEvtHandler.h  ExpatParser.cpp  SourceList.cmake  XMLMXAAttributeWriter.hpp  XMLStreamReaderDelegate.hpp  XMLUserMetaDataWriter.h  XML_SourceList.cmake
Code/MXA/XML/Deprecated/: XMLDataModelReader.cpp  XMLDataModelReader.h  XMLIODelegate.cpp
Documentation/: Background.dox  Background.html  Binaries.html  CompileNotes.dox  CompileNotes.html  CompileNotesUnix.dox  CompileNotesUnix.html  CompileNotesXP.html  Data.html  Examples.dox  Examples.html  HowToWriteDataImportDelegate.dox  HowToWriteDataImportDelegate.html  ImportingData.dox  ImportingData.html  MXASpecification.dox  MXASpecification.html  MXAUtilities.dox  MXAUtilities.html  Navigation.js  SampleData.html  SourceCodes.html  Todo.html  (+9 more)
Examples/: CMakeLists.txt  DataWrapperExample.cpp  ExampleFileLocations.h.in  GetDataExample.cpp  SupportFileExample.cpp  main.cpp
Examples/DataImport/: ComplexImportExample.cpp  ComplexImportExample.h  ExampleImportDelegate.cpp  ExampleImportDelegate.h  ExampleImportDelegateFactory.cpp  ExampleImportDelegateFactory.h  SimpleImportExample.cpp  SimpleImportExample.h  main.cpp
Examples/Example1/: Example1.cpp
Examples/Example2/: Example2.cpp
Examples/MXAPropertyExample/: MyPropertyClass.cpp  MyPropertyClass.h  main.cpp
Tests/: AnyDataDelegate.h  BmpIOTest.cpp  CMakeLists.txt  DataFileGenerator.cpp  DataFileGenerator.h  DataImportTest.cpp  DataModelTest.cpp  DataSourcePathIndexSectionTest.cpp  DatasetTest.cpp  H5ImportTest.h  H5LiteTest.cpp  H5UtilitiesTest.cpp  IImportPropertyTest.cpp  MXAFileReaderWriterTest.cpp  MXAFileSystemPathTest.cpp  MXALoggerTest.cpp  ScalarDataImport.h  StringUtilsTest.cpp  SupportFileTest.cpp  TestDataFileLocations.h.in  TiffMaker.cpp  UnitTestSupport.hpp  UtilitiesTest.cpp  VectorDataImport.h  VtkHDF5Test.cpp  WriterDelegateTest.cpp  XMLTest.cpp
Utilities/: CMakeLists.txt  CMakeLists.txt.in  FindMXADataModel.cmake  ImportDelegate.cpp.in  ImportDelegate.h.in  ImportDelegateFactory.cpp.in  ImportDelegateFactory.h.in  ImportGenerator.cpp  UtilityFileLocations.h.in  main.cpp.in
Utilities/Templates/: CMakeLists.txt.in  ImportDelegate.cpp.in  ImportDelegate.h.in  ImportDelegateFactory.h.in  ImportGenerator.cpp  main.cpp.in
src/Examples/: CMakeLists.txt  DataFileGenerator.cpp  DataFileGenerator.h  DataWrapperExample.cpp  ExampleFileLocations.h.in  GetDataExample.cpp  SupportFileExample.cpp  main.cpp
src/Examples/DataImport/: ComplexImportExample.cpp  ComplexImportExample.h  ExampleImportDelegate.cpp  ExampleImportDelegate.h  ExampleImportDelegateFactory.h  SimpleImportExample.cpp  SimpleImportExample.h  main.cpp
src/Examples/Example1/: Example1.cpp
src/Examples/Example2/: Example2.cpp
src/Examples/MXAPropertyExample/: MyPropertyClass.cpp  MyPropertyClass.h  main.cpp
src/Testing/: AnyDataDelegate.h  BmpIOTest.cpp  CMakeLists.txt  DataFileGenerator.cpp  DataFileGenerator.h  DataImportTest.cpp  DataModelTest.cpp  DataSourcePathIndexSectionTest.cpp  DatasetTest.cpp  H5ImportTest.h  H5LiteTest.cpp  H5UtilitiesTest.cpp  IImportPropertyTest.cpp  ScalarDataImport.h  StringUtilsTest.cpp  SupportFileTest.cpp  TestDataFileLocations.h.in  TiffMaker.h  VectorDataImport.h  VtkHDF5Test.cpp  XMLTest.cpp
(+443 files in other folders)
